--- a/css/main2.css
+++ b/css/main2.css
@@ -290,7 +290,8 @@ input:focus 		{ outline:none; }
 input:focus ~ .group label, input:valid ~ label 		{
   top:-20px;
   font-size:14px;
-  color:#5264AE;
+  
+    color: rgb(139,129,188);
 }
 
 /* BOTTOM BARS ================================= */
@@ -301,7 +302,7 @@ input:focus ~ .group label, input:valid ~ label 		{
   width:0;
   bottom:1px; 
   position:absolute;
-  background:#5264AE; 
+    background: rgb(139,129,188);
   transition:0.2s ease all; 
   -moz-transition:0.2s ease all; 
   -webkit-transition:0.2s ease all;
