--- a/css/main2.css
+++ b/css/main2.css
@@ -7,7 +7,6 @@ body {
 }
 
 .main-bg {
-    background-image: url(../img/cover.jpg);
     background-size: cover;
     background-position: 50% 50%;
     height: 100vh;
@@ -29,8 +28,8 @@ body {
 }
 
 .particles {
-  width: 100%;
-  height: 100%;
+    width: 100vw!important;
+    height: auto!important;
 }
 video#bgvid { 
     position: fixed;
@@ -44,7 +43,6 @@ video#bgvid {
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
-    background: url(polina.jpg) no-repeat;
     background-size: cover; 
 }
 .vid-content video {
@@ -251,6 +249,11 @@ input[type=checkbox], input[type=radio] {
     line-height: normal;
     width: auto;
     display: inline-block;
+}
+
+.radio-group label {
+    margin: 0 10px;
+    font-size: 15px;
 }
 
 * { box-sizing:border-box; }
